--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@ body {
 }
 
 .caja2 {
-    height: 300px;
-    background-color: rgb(60, 0, 255);
-    margin: 20px 5px;
+    height: 370px;
+    background-color: rgb(86, 78, 114);
+    margin: ;
 }
 
 .caja3 {
@@ -25,7 +25,7 @@ body {
 }
 
 .caja4 {
-    height: 100px;
+    height: 60px;
     background-color: rgb(251, 0, 255);
     border: 2px solid white;
     padding: 10px;
